# Replicator-RS

./: Cargo.toml
src/: lib.rs  main.rs  noise.rs  simplex.rs  solver.rs  solvers.rs  state.rs  tasks.rs  taxon_table.rs  utils.rs
src/solvers/: non_spatial.rs
src/solvers/non_spatial/: noise.rs  rk4.rs
src/tasks/: replicator_deterministic.rs
