[package]
name = "replicator-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Random number generation
rand = { version = "0.9.2", features = ["std", "small_rng"] }
rand_distr = "0.5.1"
rand_chacha = "0.9.0"

# Parallelism & N-dimensional arrays
rayon = "1.11.0"
crossbeam = "0.8.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Physics & Math
num-traits = "0.2.19"
physics_in_parallel = "1.0.8"
ndarray = "0.17"
ndarray-linalg = { version = "0.18", features = ["openblas-static"] } 

# Utility libraries
indicatif = "0.18.3"
logger_bro = "0.3.0"
once_cell = "1.21" 
anyhow = "1.0"

[profile.release]
opt-level = 3  # Maximum optimization
lto = true     # Enable link-time optimization (slower compile, faster runtime)
codegen-units = 1  # Better optimization at the cost of compile time


